force-app/main/default/objects/Account/fields/Another_number__c.field-meta.xml
<CustomField>
    <fullName>Another_number__c</fullName>
    <label>Another number</label>
    <type>Phone</type>
</CustomField>