force-app/main/default/objects/Account/fields/Duplicate_phone__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_phone__c</fullName>
    <label>Duplicate phone</label>
    <type>Phone</type>
</CustomField>