force-app/main/default/objects/Account/fields/Test_Field_SF__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_SF__c</fullName>
    <label>Test Field  SF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>